# evo-star

./: .gitignore  API_KEYS_SETUP.md  ARCHITECTURE_ROADMAP.md  ECOSYSTEM_VISION.md  ENVIRONMENT_SETUP.md  FLUENT_API_LANGGRAPH_INTEGRATION_SUMMARY.md  LANGGRAPH_MIGRATION_ROADMAP.md  README.md  pyproject.toml  setup_environment.py  simple_poc_demo.py  test_evolver_integration_simple.py  test_fluent_langgraph_integration.py  test_langgraph_poc.py  test_litellm_integration.py  test_new_backend_architecture.py
alpha_evolve_framework/: __init__.py  candidate_evaluator.py  codebase.py  config.py  core_types.py  database_abc.py  fluent_api.py  functional_evaluator.py  llm_block_evolver.py  llm_judge.py  llm_manager.py  logging_utils.py  map_elites_database.py  optimizer_abc.py  orchestrator.py  prompt_engine.py  simple_program_database.py
alpha_evolve_framework/backends/: __init__.py  base_backend.py  langgraph_backend.py  local_python_backend.py  local_python_orchestrator.py
alpha_evolve_framework/coding_agents/: __init__.py  base_agent.py
alpha_evolve_framework/databases/: __init__.py  database_abc.py  map_elites_database.py  simple_program_database.py
alpha_evolve_framework/evaluators/: __init__.py  candidate_evaluator.py  evaluator_abc.py  functional_evaluator.py
alpha_evolve_framework/llm/: __init__.py  llm_judge.py  llm_manager.py  prompt_engine.py
alpha_evolve_framework/optimization/: __init__.py  optimizer_abc.py
alpha_evolve_framework/utils/: __init__.py  env_loader.py  logging_utils.py
examples/: __init__.py  aider_evolution_demo.py  circle_packing_demo.ipynb  run_circle_packing_demo.py
examples/circle_packing/: __init__.py  packer_constants.py  packer_evaluator.py  packer_features.py  packer_helpers.py  packer_initial_code.py  problem_functions.py  run_new_fluent_api.py  run_packer_map_elites.py
examples/city_page/: run_city_evolution.py
src/: __init__.py  codebase.py  config.py  core_types.py  database_abc.py  evaluator_abc.py  llm_block_evolver.py  llm_manager.py  map_elites_database.py  optimizer_abc.py  orchestrator.py  prompt_engine.py  simple_program_database.py
tests/: simple_poc_demo.py  test_aider_evolver.py  test_database_checkpointing.py  test_evolver_backend_integration.py  test_fluent_langgraph_integration.py  test_langgraph_poc.py  test_new_backend_architecture.py
(+13 files in other folders)
