[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evostar"
version = "0.1.0"
description = "A framework for evolutionary algorithms and AI optimization"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
requires-python = ">=3.8"

[project.scripts]
evostar = "src.orchestrator:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "jupyter",
    "ipykernel",
    "litellm",
    "matplotlib",
    "numpy",
    "pillow",
]

[tool.hatch.envs.type-check]
dependencies = ["mypy"]
scripts = {"check" = "mypy src"}

[tool.hatch.envs.format]
dependencies = ["black", "isort"]
scripts = {"format" = ["isort src tests", "black src tests"]}

[tool.hatch.envs.test]
dependencies = ["pytest", "pytest-cov"]
scripts = {"test" = "pytest --cov=src"}
