[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evostar"
version = "0.1.0"
description = "A framework for evolutionary algorithms and AI optimization"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
requires-python = ">=3.9"
dependencies = [
    "litellm",
    "matplotlib",
    "numpy",
    "pillow",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "aider-chat",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "jupyter",
    "ipykernel",
]

[project.scripts]
evostar = "alpha_evolve_framework.orchestrator:main"

[tool.hatch.build.targets.wheel]
packages = ["alpha_evolve_framework"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "jupyter",
    "ipykernel",
    "litellm",
    "matplotlib",
    "numpy",
    "pillow",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "aider-chat",
]

[tool.hatch.envs.type-check]
dependencies = ["mypy"]
scripts = {"check" = "mypy src"}

[tool.hatch.envs.format]
dependencies = ["black", "isort"]
scripts = {"format" = ["isort src tests", "black src tests"]}

[tool.hatch.envs.test]
dependencies = ["pytest", "pytest-cov"]
scripts = {"test" = "pytest --cov=src"}
